Fix some things in proposal

--- a/verslag/report.bib
+++ b/verslag/report.bib
@@ -84,3 +84,10 @@ month={Dec},}%http://www2.cs.siu.edu/~hexmoor/classes/CS539-F10/Smith.pdf
   url = {http://www.fipa.org/specs/fipa00030/},
   note = {Doc. SC00030}
 } % http://www.fipa.org/specs/fipa00030/
+
+@book{SMDA,
+author = {Mia Hubert},
+title = {Statistische modellen en data-analyse},
+date = {2015},
+publisher = {Acco}
+}
