--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -214,7 +214,7 @@ A client waits one tick for bids to arrive. All bids are satisfactory, as drones
 \proposalV{
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary.
 
-The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.  \commentY{Disagree: note van dat dit een ACL-refuse message is? of via diagram?}  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds and the total message count is reduced.}
+The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.}
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. In original CNCP as proposed by \cite{CNCP} the initiator first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the participant, the \texttt{AcceptProposal} is sent. These two messages from the initiator to the participant are merged together in our design. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds is increased in comparison with the original CNCP protocol.
 \commentY{Hierboven nog wat veel aangepast}
@@ -264,7 +264,7 @@ Figures \taskY{nummers} show the results of our experiments. The error-bars repr
 \subsection{Analysis}
 \commentY{Echte analyse doen of ook echt expliciet vergelijken met onze hypothese?}
 \commentY{In volgorde van de research questions laten of herordenen?}
-To test our hypotheses, we used the Games-Howell\taskY{referentie} test. As the data is heteroscedastic, the TukeyHSD-method will have too many Type-I errors.\taskY{Referentie Hubert}. \taskY{referentie} showed that Games-Howell is also robust with non-normal data, which is the case with some of our results. A significance level of 95\% was used for all tests.
+To test our hypotheses, we used the Games-Howell\taskY{referentie} test. As the data is heteroscedastic, the TukeyHSD-method will have too many Type-I errors \cite{SMDA}. \taskY{referentie} showed that Games-Howell is also robust with non-normal data, which is the case with some of our results. A significance level of 95\% was used for all tests.
 
 Figure~\ref{fig:drones-profit} makes it clear that the number of Drones has an influence on which protocol maximizes profit. In case there are many drones (7 or more), DynCNET is better than CNCP, which outperforms CNET. For an average number of drones (4 to 6), CNCP outperforms CNET and DynCNET. For 3 drones or less, there is no difference between CNET and CNCP, but both outperform DynCNET. As figure~\ref{fig:dynamicclients-profit} and \ref{fig:dynamicclients-profit-largeNbDrones} show, no breakdown happens when enough drones are present. This explains the different relative performance of DynCNET depending on the number of drones.
 
@@ -282,7 +282,7 @@ When increasing the number of warehouses, the profit increases as well. Figure~\
 
 When increasing the number of clients (figure~\ref{fig:dynamicclients-profit-grid2}), the profit first increases as well. When the number of clients increases further, the number of clients that aren't delivered increases as well (figure~\ref{fig:dynamicclients-delivered-grid2}). Therefore the profit starts to fall, as the extra fines start to dominate the extra profits. DynCNET outperforms CNET and CNCP in the number of clients that get delivered when increasing the number of clients. Still, in terms of profit, the fall is a lot steeper. This can be explained by the number of times a drone switches client after being awarded the contract. This number increases linearly with the number of clients up to an average of 15 switches per drone when 200 clients appear after the start of the simulation.
 
-\commentY{Reference Statistische modellen en data-analyse boek van Mia Hubert voor onze statischische methodologie}
+\commentY{Reference Statistische modellen en data-analyse boek van Mia Hubert voor onze statischische methodologie \cite{SMDA}}
 \taskS{Reference voor Games-Howell statistische test. \proposalY{http://stats.stackexchange.com/questions/38207/what-are-the-assumptions-of-the-games-howell-multiple-comparisons-procedure, Games, P. A., Keselman, H. J., \& Clinch, J. J. Tests for homogeneity of variance in factorial designs. Psychological Bulletin, 86, 978-984, maar kan hem niet vinden}}
 
 \section{Conclusion}
