--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -212,9 +212,11 @@ The extension where drones that do not bid can respond with their reason is also
 A client waits one tick for bids to arrive. All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder, i.e. the drone with lowest cost. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
 \proposalV{
-In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary.
+In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients.
 
-The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.  While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.}
+The other awarded tasks are not queued as in the original CNET protocol \commentV{of verwijzing naar CNET eruithalen?}, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
+
+In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.}
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. In original CNCP as proposed by \cite{CNCP} the initiator first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the participant, the \texttt{AcceptProposal} is sent. These two messages from the initiator to the participant are merged together in our design. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds is increased in comparison with the original CNCP protocol.
 \commentY{Hierboven nog wat veel aangepast}
