--- a/verslag/report.bib
+++ b/verslag/report.bib
@@ -91,3 +91,14 @@ title = {Statistische modellen en data-analyse},
 date = {2015},
 publisher = {Acco}
 }
+
+@article{games1979tests,
+  title={Tests for homogeneity of variance in factorial designs.},
+  author={Games, Paul A and Keselman, Harvey J and Clinch, Jennifer J},
+  journal={Psychological Bulletin},
+  volume={86},
+  number={5},
+  pages={978},
+  year={1979},
+  publisher={American Psychological Association}
+}
