--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -156,34 +156,25 @@ In literature, other extensions of CNET can be found. \cite{TentativeBidding} de
 
 \cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When an initiator receives bids, it can choose to accept one, or choose to iterate the process by issuing an adapted the call for proposal to (a subset of) the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
 
-One of the main differences between \cite{TentativeBidding} and ICN, is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  \commentY{Oude tekst, mag dus weg, vermoed ik?\proposalY{In our setting however, both protocols do not make much sense. Participants bid using the estimated profit. They cannot increase their bid, unless the estimated profit changes.}}
+One of the main differences between \cite{TentativeBidding} and ICN, is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  
 
 \cite{LeveledCommitment} uses game theory to prove that leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract, a decommitting penalty is agreed. (This penalty might be different for both agents.) When an agent wants to cancel the contract, he has to pay his decommitting fee to the other agent. This not only gives a way to calculate whether or not to cancel a contract in favor of another contract\footnote{They prove (again using game theory) that it is harder than just checking if the profit of the new contract is higher than the fee, because the other agent might decommit if this agent doesn't decommit.}. It also allows contracts that were not possible using full commitment: it is possible that the benefit from a contract is lower than the expected benefit from other contracts that have not yet been announced. But by having the right decommitting fees, a leveled commitment contract might still be interesting for both parties.
-
-\commentY{Opnieuw weg? \proposalY{It is important to note, that in our design, bids are satisfactory if the expected profit is above the fine for not delivering to this initiator. (It does not take into account that new initiators or participants might become available). The agents described in \cite{LeveledCommitment} take the expected profit of new initiators or busy participants into account.}}
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
 \subsection{Design}
 We consider a logistics problem where a company serves an area with a fleet of drones. In this area, a number of clients appear with an order for a specific product. One of the drones takes up the order and is dispatched to a warehouse to collect a package with that product. Finally it flies to the client to deliver the package. The goal is to maximize the profit earned on making these deliveries.
 
-Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price.
+Across the world several warehouses are located. For simplification, these warehouses have an infinite stock of every package that a client could potentially order. Drones can pick up packages at these warehouses for a price that varies per warehouse in a range of 80 to 120\% of that package's market price. These warehouses are divided over the whole area in such a way that a clustering of warehouses is avoided as much as possible. To achieve niet, the number of warehouse is split in powers of two (e.g. 5 = 4 ($2^2$) + 1 ($2^0$)). For every power of two, the area is divided in the that number of equiareal rectangles, each containing one warehouse at a uniformly random position.
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
 A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards.
-\commentY{iets zeggen over "uniformly" random?}
+\commentY{iets zeggen over "uniformly" random? \proposalV{clients that appear randomly afterwards, uniformly distributed over time.}}
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents. 
 
 The failures of drones are based on a Poisson distribution and are used in calculating the bid that drones will make on tasks. The bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure on that trajectory; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering), that it can reach with some battery power left and that it can deliver before the end time of the order.
-
-
-
-\taskS{Warehouses randomly algorithm beschrijven
-\proposalY{
-To divide the warehouses over the whole area, the number of warehouse is split in powers of two footnote{5 = 4 + 1}. For every power of two, the area is divided in the same number of equiareal rectangles, each containing a warehouse at a uniformly random position.
-}}
 
 \outline{\begin{itemize}
         \item drones leveren orders uit warehouses aan clients (1 order per client)\commentY{OK}
@@ -240,16 +231,11 @@ The extension where drones that do not bid can respond with their reason is also
 
 A client waits one tick for bids to arrive. All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder, i.e. the drone with lowest cost. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
-\proposalV{
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients.
 
 The other awarded tasks are not queued as in the original CNET protocol \commentV{of verwijzing naar CNET eruithalen?}, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
 
-In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.}
-
-In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. In original CNCP as proposed by \cite{CNCP} the initiator first sent a \texttt{Request} message and only upon the \texttt{Agree} message of the participant, the \texttt{AcceptProposal} is sent. These two messages from the initiator to the participant are merged together in our design. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round. The number of bidding rounds is increased in comparison with the original CNCP protocol.
-\commentY{Hierboven nog wat veel aangepast}
-
+In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.
 
 Once a drone has received a task, it starts executing the task by flying to the warehouse with the lowest estimated cost (that was calculated when bidding). It picks up the package at the warehouse and can possibly charge its battery there to make sure that it can complete the delivery, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
